keycloak/manifests-based/keycloak-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
spec:
  ingressClassName: "traefik"
  # tls:
  #   - hosts:
  #       - keycloak.local.com
  rules:
  - host: keycloak.local.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: keycloak
              port:
                number: 8080
  tls:
  - hosts:
    - keycloak.local.com
    secretName: keycloak-tls-cert
